Fixes, renaming discord.js to index.js, replace var with let, add dice 20 command, include the new command in help command and do some formatting. Plus include .replit file for configuration

--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
   "scripts": {
     "test": "xo && ava && tsd",
     "serve": "nodemon server.js",
-    "start": "nodemon discord.js"
+    "start": "nodemon index.js"
   },
   "version": "6.5.0",
   "main": "command.js"
